--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,10 @@
+@import "layouts/main";
 // Graphical variables
 @import "config/fonts";
 @import "config/colors";
 @import "config/bootstrap_variables";
+@import "config/animations";
+@import "config/variables";
 
 // External libraries
 @import "bootstrap-sprockets";
@@ -10,7 +13,6 @@
 @import "font-awesome";
 
 // Your CSS partials
-@import "layouts/index";
 @import "components/index";
 @import "pages/index";
 @import "recipes/index"
