--- a/app/assets/stylesheets/layouts/_index.scss
+++ b/app/assets/stylesheets/layouts/_index.scss
@@ -1,6 +1,2 @@
 // Import your layouts CSS files here.
-// Examples:
-// @import "dashboard";
-// @import "profile";
-// @import "map";
-
+@import "main";
