--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,61 +1,49 @@
-
-.bande{
-      background-image: url(https://images.unsplash.com/photo-1496116218417-1a781b1c416c?ixlib=rb-0.3.5&s=aa5f954f8c3de6f8427e6f8ad35c0085&auto=format&fit=crop&w=2550&q=80) ;
-      background-position: center center;
-      background-repeat:  no-repeat;
-      background-attachment: fixed;
-      background-size:  cover;
-      background-color: white;
-      height: calc(100vh - 70px);
-    }
-
-.structure{
-  height:100%;
-}
-
-.banner-content{
+.header {
+  height: 98vh;
+  // linear-gradient(to right bottom, rgba($color-primary-light, .8), rgba($color-primary-dark, .8)),
+  background-image: url(https://images.unsplash.com/photo-1496116218417-1a781b1c416c?ixlib=rb-0.3.5&s=aa5f954f8c3de6f8427e6f8ad35c0085&auto=format&fit=crop&w=2550&q=80);
+  background-size: cover;
+  background-position: center;
+  margin: 1rem;
   position: relative;
-  h2 {
-  background-color: black;
-  color: white;
-  font-size: 50px;
+  // clip-path: polygon(0 0, 100% 0, 100% 90vh, 50% 100vh, 0 90vh);
+
+  &__logo-box {
+    position: absolute;
+    top: 4rem;
+    left: 4rem;
+  }
+
+  &__logo {
+    font-size: 6rem;
+    font-weight: 100;
+    text-transform: uppercase;
+    color: $color-white;
+    background-color: $color-black;
+    padding: 0 1.5rem;
+    border-radius: 3px;
+  }
+
+  &__text-box {
+    position: absolute;
+    bottom: 1rem;
+    right: 2rem;
+    font-size: 2rem;
+    font-weight: 100;
+    color: $color-white;
+    background-color: $color-black;
+    padding: 1rem 1.5rem;
+    border-radius: 3px;
+    h1 {
+      margin: 0;
+    }
+  }
+
+  &__button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+  }
 }
-}
-
-.bottom-right {
-  position: absolute;
-  bottom: 8px;
-  left: 16px;
-
-}
-
-
-.incipit{
-  background-color: pink;
-  color: white;
-  height:100%;
-  // text-align: center;
-  padding: 20%;
-}
-
-.cardholder{
-  background-color: rgb(254, 219, 50);
-  color: white;
-  height: 100%;
-  padding: 10%;
-}
-
-.banner-content {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  width: 100%;
-  height:45%;
-  bottom: 0;
-  display: block;
-  position: absolute;
-  padding: 0.5em;
-}
-
-
-
