--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,13 +5,13 @@
   </div>
 
   <div class="header__button">
-    <a href="#"class="btn btn--white btn--animated">Entrer</a>
+    <a href="/recipes/3"class="btn btn--white btn--animated">Entrer</a>
   </div>
 
   <div class="header__text-box">
     <h1 class="heading-primary">
-      <span class="heading-primary--main">Découvrez</span>
-      <span class="heading-primary--sub">la gastronomie japonaise</span>
+      <span class="heading-primary--sub">Recettes</span>
+      <span class="heading-primary--main">Japonaises</span>
     </h1>
   </div>
 </header>
