--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -1,5 +1,5 @@
-$color-primary-light: #ff8000;
-$color-primary-dark: #fd5f00;
+$color-primary-light: #e21b20;
+$color-primary-dark: #fe1d00;
 
 $color-grey-light-1: #F7F7F7;
 $color-grey-light-2: #EEE;
