--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,7 +5,7 @@
   </div>
 
   <div class="header__button">
-    <a href="/recipes/3"class="btn btn--white btn--animated">Entrer</a>
+    <a href="/recipes/3"class="btn btn--white btn--animated">Aperçu</a>
   </div>
 
   <div class="header__text-box">
