--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,7 +1,6 @@
 <header class="header">
   <div class="header__logo-box">
     <p class="header__logo">oishi.io</p>
-    <!-- <img src="img/logo-white.png" alt="Logo" class="header__logo"> -->
   </div>
 
   <div class="header__button">
@@ -15,3 +14,7 @@
     </h1>
   </div>
 </header>
+
+<section class="section__discover">
+
+</section>
