media queries on font-size on landing

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <header class="header">
   <div class="header__logo-box">
-    <p class="header__logo">oishi.io</p>
+    <h1 class="header__logo">oishi.io</h1>
   </div>
 
   <div class="header__button">
