--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,13 @@
 <header class="header">
-  <div class="header__logo-box">
-    <h1 class="header__logo">oishi.io</h1>
-  </div>
-
   <div class="header__text-box">
     <h1 class="heading-primary">
       <span class="heading-primary--sub">Recettes</span>
       <span class="heading-primary--main">Japonaises</span>
     </h1>
+  </div>
+  
+  <div class="header__title">
+    <h1 class="header__title--text">oishi.io</h1>
   </div>
 </header>
 
