--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -16,22 +16,18 @@
     position: absolute;
     bottom: 3rem;
     right: 3rem;
+    background-color: $color-black;
+    border-radius: 3px;
+    padding: .5rem 0.5rem .5rem 1.5rem;
 
     &--text {
-      margin: 0 auto;
+      margin: 0;
       font-size: 6rem;
       font-weight: 300;
       text-transform: uppercase;
       color: $color-white;
-      background-color: $color-black;
-      // padding: .7rem .5rem 0.7rem 2rem;
-      border-radius: 3px;
-      letter-spacing: 1.5rem;
+      letter-spacing: 1rem;
       font-family: $headers-font;
-
-      &:last-letter {
-        margin-right: -1.5rem;
-      }
     }
   }
 
