--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,14 +2,17 @@
 
   <div class="section-search">
     <div class="search">
-      <input type="text">
+      <input type="text" placeholder="Essayez: 'Udon'">
     </div>
     <div class="recipe__box">
-      <% @recipes.each do |recipe| %>
-      <div class="recipe__box__card">
-        <h2><%= recipe.title %></h2>
+      <div class="recipe__box--scroll-wrapper">
+        <% @recipes.each do |recipe| %>
+        <div class="recipe__box__card">
+          <h2><%= recipe.title %></h2>
+        </div>
+        <% end %>
+        <div class="recipe__box__card"></div>
       </div>
-      <% end %>
     </div>
   </div>
   <div class="text-box">
