--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,7 +6,7 @@
   border: 1px solid $color-black;
 
   .section-search {
-    width: 95%;
+    width: 90vw;
     position: absolute;
     top: 40%;
     left:50%;
@@ -20,9 +20,9 @@
     }
 
     .recipe__box {
-      
       &--scroll-wrapper {
         display: flex;
+        justify-content: space-between;
         flex-wrap: nowrap;
         overflow-x: auto;
         -webkit-overflow-scrolling: touch;
@@ -35,6 +35,7 @@
         height: 25rem;
         width: 25rem;
         flex: 0 0 auto;
+
         &:not(:last-child) {
           margin-right: 2rem;
         }
