fix screen height size bug

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="landing" id="home">
+<div class="landing" id="home" v-bind:style="{ height: getScreenHeight()}">
 
   <div class="section-search">
     <div class="search">
