--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,5 +1,5 @@
 .landing {
-  height: calc(100vh - 1rem);
+  // height: calc(100vh - 1rem);
   background-color: $color-white;
   margin: .5rem;
   position: relative;
