--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
 
   <div class="section-search">
     <div class="search">
-      <input v-model="query" type="text" class="search__input" placeholder="Essayez: 'Udon'">
+      <input v-on:input="query = $event.target.value" type="text" class="search__input" placeholder="Essayez: 'Udon'">
     </div>
     <div class="recipe__box">
       <div class="sk-folding-cube" v-show="isLoading">
@@ -10,6 +10,9 @@
         <div class="sk-cube2 sk-cube"></div>
         <div class="sk-cube4 sk-cube"></div>
         <div class="sk-cube3 sk-cube"></div>
+      </div>
+      <div class="recipe__box--no-result" v-show="recipes.length === 0">
+        Aucune recette trouvée.
       </div>
       <div class="recipe__box--scroll-wrapper" v-show="!isLoading">
         <div v-for="recipe in recipes" class="recipe__box__card">
