remove unnsupported tuch

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,7 +15,7 @@
         <div class="sk-cube3 sk-cube"></div>
       </div>
       <div class="recipe__box--no-result" v-show="recipes.length === 0">
-        Aucune recette trouvée.
+        Aucune recette trouvée
       </div>
       <div class="recipe__box--scroll-wrapper"
           v-show="!isLoading"
