--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -22,6 +22,7 @@
         display: flex;
         flex-wrap: nowrap;
         overflow-x: auto;
+        transition: margin-left 0.5s ease;
         &::-webkit-scrollbar {
           // display: none;
         }
