--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -18,7 +18,7 @@
         Aucune recette trouvée
       </div>
       <div class="recipe__box--scroll-wrapper"
-          v-if="!isLoading"
+          v-if="!isLoading && recipesCount > 0"
           v-bind:style="{ marginLeft: leftMargin }">
         <div v-for="recipe in recipes" class="recipe__box__card">
           <h2>{{ recipe.title }}</h2>
