improve cards behaviour

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -50,7 +50,7 @@
       &--no-result {
         text-align: center;
         line-height: 30px;
-        margin: 115px 0;
+        margin: 115px 0 125px 0;
       }
       &__card {
         border: 1px solid $color-black;
