--- a/app/views/shared/_menu.html.erb
+++ b/app/views/shared/_menu.html.erb
@@ -1,6 +1,6 @@
 <div class="hamburger-menu">
   <div class="dropdown">
-    <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+    <a class="dropdown__button" data-toggle="dropdown">Menu</a>
     <ul class="dropdown-menu dropdown-menu-right menu__dropdown">
       <li><%= link_to "Home", root_path, class: "menu__item menu__link" %></li>
       <li><%= link_to "Admin", rails_admin_path, class: "menu__item menu__link" %></li>
