--- a/app/assets/stylesheets/layouts/_main.scss
+++ b/app/assets/stylesheets/layouts/_main.scss
@@ -14,4 +14,8 @@ html {
 
 body {
   box-sizing: border-box;
+  overflow-y: scroll;
+    &::-webkit-scrollbar{
+    display: none;/*width:0em is better*/
+  }
 }
