change title to name in recipe model

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,7 +21,7 @@
           v-else
           v-bind:style="{ marginLeft: leftMargin }">
         <div v-for="recipe in recipes" class="recipe__box__card">
-          <h2>{{ recipe.title }}</h2>
+          <h2>{{ recipe.name }}</h2>
         </div>
       </div>
     </div>
