--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -54,6 +54,7 @@
       }
       &__card {
         border: 1px solid $color-black;
+        background-color: $color-white;
         height: 25rem;
         width: 25rem;
         flex: 0 0 auto;
@@ -62,6 +63,16 @@
 
         &:not(:last-child) {
           margin-right: 2rem;
+        }
+
+        h2 {
+          color: $color-black;
+          margin: 0;
+          font-family: $headers-font;
+          font-weight: 300;
+          a {
+            text-decoration: none;
+          }
         }
       }
     }
