--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,19 +1,19 @@
-<div class="wrapper">
+<div class="wrapper" id="ingredients-index">
   <div class="container">
     <div align="center">
       <h1>Liste des Ingrédients</h1>
         <%= link_to 'Ajouter un ingrédient', new_ingredient_path %>
         <ul>
-          <% @ingredients.each do |ingredient| %>
-            <li style="list-style: none">
-              <%= link_to ingredient.name, ingredient_path(ingredient) %>
-                <% if policy(ingredient).update? %>
-                <%= link_to 'delete', ingredient_path(ingredient), method: :delete %>
-                <%= link_to 'edit', edit_ingredient_path(ingredient)%>
-                <% end %>
-            </li>
-          <% end %>
+          <li v-for="ingredient in ingredients" style="list-style: none">
+            <a :href=`/ingredients/${ingredient.id}`>{{ ingredient.name }}</a>
+            <a :href=`/ingredients/${ingredient.id}/edit`>Edit</a>
+            <a v-on:click="destroyIngredient(ingredient.id)">X</a>
+          </li>
         </ul>
     </div>
   </div>
 </div>
+
+<% content_for :after_js do %>
+  <%= javascript_pack_tag 'ingredients' %>
+<% end %>
