--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/velocity/1.2.3/velocity.min.js"></script>
+
 <div class="landing" id="home"
      v-bind:style="{ height: getScreenHeight() }">
 
@@ -24,11 +26,25 @@
           <h2><a :href=`/recipes/${recipe.id}`>{{ recipe.name }}</a></h2>
         </div>
       </div> -->
-      <transition-group name="recipe-cards" tag="div" class="recipe__box--scroll-wrapper" v-else
+      <!-- <transition-group name="recipe-cards" tag="div" class="recipe__box--scroll-wrapper" v-else
       v-bind:style="{ marginLeft: leftMargin }">
         <div
           v-for="recipe in recipes"
           v-bind:key="recipe.id"
+          class="recipe__box__card"
+        >
+          <h2><a :href=`/recipes/${recipe.id}`>{{ recipe.name }}</a></h2>
+        </div>
+      </transition-group> -->
+      <transition-group name="recipe-cards" tag="div" class="recipe__box--scroll-wrapper" v-else
+      v-bind:style="{ marginLeft: leftMargin }" v-bind:css="false"
+    v-on:before-enter="beforeEnter"
+    v-on:enter="enter"
+    v-on:leave="leave">
+        <div
+          v-for="recipe in recipes"
+          v-bind:key="recipe.name"
+          v-bind:data-index="recipe.index"
           class="recipe__box__card"
         >
           <h2><a :href=`/recipes/${recipe.id}`>{{ recipe.name }}</a></h2>
