--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -23,29 +23,9 @@
         display: flex;
         flex-wrap: nowrap;
         overflow-x: auto;
-        transition: margin-left 0.3s ease;
         &::-webkit-scrollbar {
           // display: none;
         }
-        // & > .recipe__box__card {
-        //   animation: bouncing-card .3s ease-in-out;
-        //   animation-fill-mode: forwards;
-        // }
-        // & > .recipe__box__card:nth-child(2) {
-        //   animation-delay: .1s;
-        // }
-        // & > .recipe__box__card:nth-child(3) {
-        //   animation-delay: .2s;
-        // }
-        // & > .recipe__box__card:nth-child(4) {
-        //   animation-delay: .3s;
-        // }
-        // & > .recipe__box__card:nth-child(5) {
-        //   animation-delay: .4s;
-        // }
-        // & > .recipe__box__card:nth-child(6) {
-        //   animation-delay: .5s;
-        // }
       }
       &--no-result {
         text-align: center;
@@ -58,7 +38,7 @@
         height: 25rem;
         width: 25rem;
         flex: 0 0 auto;
-        transition: all .5s ease;
+        transition: all .3s ease;
 
         &:not(:last-child) {
           margin-right: 2rem;
@@ -77,10 +57,9 @@
     }
   }
 
-  .recipe-cards-enter, .recipe-cards-leave-to
-  /* .recipe-cards-leave-active below version 2.1.8 */ {
+  .recipe-cards-enter, .recipe-cards-leave-to {
     opacity: 0;
-    transform: translateY(4rem);
+    transform: scale(.5);
   }
 
   .title{
