--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -23,6 +23,7 @@
         display: flex;
         flex-wrap: nowrap;
         overflow-x: auto;
+        // transition: margin-left 0.3s ease;
         &::-webkit-scrollbar {
           // display: none;
         }
